ci: add shell-session and target-tracker to build workflow

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -84,8 +84,12 @@ jobs:
               - 'tools/sqlite/**'
             sqlmap:
               - 'tools/sqlmap/**'
+            shell-session:
+              - 'tools/shell-session/**'
             ssh:
               - 'tools/ssh/**'
+            target-tracker:
+              - 'tools/target-tracker/**'
             tunnel:
               - 'tools/tunnel/**'
             web-fingerprint:
@@ -187,7 +191,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
