feat: add ike-scan and scapy MCP tools for VPN enumeration and packet crafting

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -100,6 +100,10 @@ jobs:
               - 'tools/wpscan/**'
             zap:
               - 'tools/zap/**'
+            ike-scan:
+              - 'tools/ike-scan/**'
+            scapy:
+              - 'tools/scapy/**'
 
       - name: Filter out mcp-common from tools list
         id: filter-tools
@@ -191,7 +195,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, ike-scan, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, scapy, searchsploit, shell-session, sqlite, sqlmap, ssh, target-tracker, tunnel, web-fingerprint, web-session, wpscan, zap]
 
     permissions:
       contents: read
