fix: add comprehensive playwright-mcp methods for web automation pentesting

--- a/registry.yaml
+++ b/registry.yaml
@@ -275,6 +275,121 @@ tools:
       Install: npx @anthropic-ai/create-mcp-server@latest --template playwright
       See: https://github.com/microsoft/playwright-mcp
 
+    methods:
+      # Navigation
+      browser_navigate:
+        description: "Navigate to a URL"
+        params:
+          url: { type: string, required: true, description: "URL to navigate to" }
+      browser_navigate_back:
+        description: "Go back to the previous page"
+        params: {}
+
+      # Page State (call first to get element refs)
+      browser_snapshot:
+        description: "Capture accessibility snapshot - call this first to get element refs for other tools"
+        when_to_use: "Before interacting with elements - returns refs needed for click/type/etc"
+        params: {}
+      browser_take_screenshot:
+        description: "Capture visual screenshot of the page"
+        params:
+          filename: { type: string, description: "Optional filename to save" }
+
+      # Element Interaction (use refs from snapshot)
+      browser_click:
+        description: "Click on an element using ref from snapshot"
+        params:
+          element: { type: string, required: true, description: "Human description for permission" }
+          ref: { type: string, required: true, description: "Element ref from browser_snapshot" }
+      browser_hover:
+        description: "Hover over an element (reveal menus, tooltips)"
+        params:
+          element: { type: string, required: true, description: "Human description" }
+          ref: { type: string, required: true, description: "Element ref from snapshot" }
+      browser_type:
+        description: "Type text into an editable element"
+        params:
+          text: { type: string, required: true, description: "Text to type" }
+          submit: { type: boolean, description: "Press Enter after typing" }
+          slowly: { type: boolean, description: "Type character by character (triggers key handlers)" }
+      browser_fill_form:
+        description: "Fill multiple form fields at once"
+        params:
+          fields:
+            type: array
+            required: true
+            description: "Array of {name, type, ref, value} - type is textbox/checkbox/radio/combobox"
+      browser_select_option:
+        description: "Select option from dropdown"
+        params:
+          element: { type: string, required: true }
+          ref: { type: string, required: true }
+          value: { type: string, required: true, description: "Option text to select" }
+      browser_file_upload:
+        description: "Upload files to file input"
+        params:
+          paths: { type: array, required: true, description: "File paths to upload" }
+
+      # Keyboard
+      browser_press_key:
+        description: "Press a keyboard key (Enter, Tab, Escape, ArrowDown, etc)"
+        params:
+          key: { type: string, required: true, description: "Key name like Enter, Tab, Escape" }
+
+      # JavaScript Execution (XSS testing, DOM manipulation)
+      browser_evaluate:
+        description: "Execute JavaScript on page or element"
+        params:
+          function: { type: string, required: true, description: "JS code as () => {...} or (element) => {...}" }
+          element: { type: string, description: "Human description if targeting element" }
+          ref: { type: string, description: "Element ref if targeting specific element" }
+      browser_run_code:
+        description: "Run arbitrary Playwright code snippet"
+        params:
+          code: { type: string, required: true, description: "Playwright code to execute" }
+
+      # Dialogs & Alerts
+      browser_handle_dialog:
+        description: "Handle alert, confirm, or prompt dialogs"
+        params:
+          accept: { type: boolean, required: true, description: "Accept or dismiss dialog" }
+          promptText: { type: string, description: "Text to enter for prompt dialogs" }
+
+      # Monitoring (useful for auth testing, API discovery)
+      browser_network_requests:
+        description: "Get list of network requests made by page"
+        when_to_use: "Discover API endpoints, check for sensitive data in requests"
+        params: {}
+      browser_console_messages:
+        description: "Get console log messages from page"
+        when_to_use: "Check for JavaScript errors, debug info, leaked secrets"
+        params: {}
+
+      # Wait & Sync
+      browser_wait_for:
+        description: "Wait for text to appear/disappear or timeout"
+        params:
+          text: { type: string, description: "Text to wait for" }
+          textGone: { type: string, description: "Text to wait to disappear" }
+          timeout: { type: integer, description: "Max wait time in ms" }
+
+      # Tab Management
+      browser_tabs:
+        description: "List, create, close, or switch browser tabs"
+        params:
+          action: { type: string, required: true, description: "list, new, close, or select" }
+          tabId: { type: string, description: "Tab ID for close/select actions" }
+
+      # Control
+      browser_resize:
+        description: "Resize browser window"
+        params:
+          width: { type: integer, required: true }
+          height: { type: integer, required: true }
+      browser_close:
+        description: "Close the browser page"
+        params: {}
+
   # =============================================================================
   # RECONNAISSANCE
   # =============================================================================
