feat: add curl.download_to_file for large file downloads to session directory

--- a/registry.yaml
+++ b/registry.yaml
@@ -139,6 +139,47 @@ tools:
             type: string
             description: "File contents as base64"
 
+      download_to_file:
+        description: "Download a large file directly to a path (for wordlists, binaries, etc.)"
+        when_to_use: "To download large files like wordlists to the session directory. Use this instead of 'download' for files over 5MB."
+        params:
+          url:
+            type: string
+            required: true
+            description: "URL to download from"
+          output_path:
+            type: string
+            required: true
+            description: "Path to save file (e.g., /session/wordlists/rockyou.txt)"
+          timeout:
+            type: integer
+            default: 600
+            description: "Download timeout in seconds (default 10 minutes for large files)"
+          insecure:
+            type: boolean
+            default: false
+            description: "Skip SSL certificate verification"
+          decompress:
+            type: boolean
+            default: true
+            description: "Auto-decompress .gz files after download"
+        returns:
+          output_path:
+            type: string
+            description: "Path where file was saved"
+          size_bytes:
+            type: integer
+            description: "File size in bytes"
+          size_mb:
+            type: number
+            description: "File size in MB"
+          line_count:
+            type: integer
+            description: "Number of lines (for text files)"
+          decompressed:
+            type: boolean
+            description: "Whether file was decompressed"
+
       inject:
         description: "Send a payload to a web RCE endpoint and extract output"
         when_to_use: "For web RCE exploitation with automatic payload encoding and output extraction"
