docs: improve curl registry with wordlist download routing hints

--- a/registry.yaml
+++ b/registry.yaml
@@ -39,12 +39,19 @@ tools:
         - "single HTTP request"
         - "exploit payload delivery"
         - "file download"
+        - "wordlist download"
+        - "download wordlist to session directory"
         - "web shell interaction"
         - "RCE exploitation"
       never_use_for:
         - "directory brute-forcing"
         - "web fuzzing"
         - "automated scanning"
+      triggers:
+        - "download wordlist"
+        - "get rockyou"
+        - "fetch wordlist"
+        - "download to session"
       prefer_over: []
 
     phases:
@@ -141,7 +148,7 @@ tools:
 
       download_to_file:
         description: "Download a large file directly to a path (for wordlists, binaries, etc.)"
-        when_to_use: "To download large files like wordlists to the session directory. Use this instead of 'download' for files over 5MB."
+        when_to_use: "To download wordlists or large files to /session/wordlists/. Use web_search to find wordlist URLs, then download_to_file to save them. Auto-decompresses .gz files. Example: curl.download_to_file(url='https://.../rockyou.txt', output_path='/session/wordlists/rockyou.txt')"
         params:
           url:
             type: string
