ci: add strongswan to workflow build matrix

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -104,6 +104,8 @@ jobs:
               - 'tools/ike-scan/**'
             scapy:
               - 'tools/scapy/**'
+            strongswan:
+              - 'tools/strongswan/**'
 
       - name: Filter out mcp-common from tools list
         id: filter-tools
