docs: add timeout param to strongswan registry entry

--- a/registry.yaml
+++ b/registry.yaml
@@ -6497,6 +6497,10 @@ tools:
           connection_name:
             type: string
             description: "Custom connection name (auto-generated if not provided)"
+          timeout:
+            type: integer
+            default: 120
+            description: "Connection timeout in seconds (default: 120)"
         returns:
           connection_name:
             type: string
