feat: mark strongswan as service container for network sharing

--- a/registry.yaml
+++ b/registry.yaml
@@ -6415,6 +6415,10 @@ tools:
     image: "ghcr.io/silicon-works/mcp-tools-strongswan:latest"
     image_size_mb: 200
 
+    # Service container - persists for session, other tools share its network
+    service: true
+    service_name: "vpn"
+
     capabilities:
       - ipsec_vpn
       - vpn_client
