fix: ike-scan PSK hash validation and add ssh_options for VPN/MTU issues
- ike-scan: revert overly strict PSK hash validation (100 char threshold back to 20)
- ssh: add ssh_options parameter to all methods for custom SSH options
- ssh: enables KexAlgorithms workaround for post-quantum packet fragmentation over VPN

--- a/registry.yaml
+++ b/registry.yaml
@@ -2904,6 +2904,9 @@ tools:
             type: integer
             default: 30
             description: "Connection timeout in seconds"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           exit_code:
             type: integer
@@ -2945,6 +2948,9 @@ tools:
             type: integer
             default: 60
             description: "Total timeout for all commands"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           exit_code:
             type: integer
@@ -2983,6 +2989,9 @@ tools:
             type: integer
             default: 60
             description: "Transfer timeout in seconds"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           content:
             type: string
@@ -3025,6 +3034,9 @@ tools:
             type: integer
             default: 60
             description: "Transfer timeout in seconds"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           size:
             type: integer
@@ -3068,6 +3080,9 @@ tools:
             type: integer
             default: 300
             description: "Transfer timeout in seconds"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           size:
             type: integer
@@ -3110,6 +3125,9 @@ tools:
             type: integer
             default: 300
             description: "Execution timeout in seconds"
+          ssh_options:
+            type: string
+            description: "Additional SSH options (e.g., '-o KexAlgorithms=curve25519-sha256' for VPN/MTU issues)"
         returns:
           exit_code:
             type: integer
