feat(curl): add timing, debug, and structured error handling
- Add timing capture for all requests (DNS, connect, TLS, first byte, total)
- Add debug_level parameter (0-3) for request inspection
- Add connect_timeout parameter separate from request timeout
- Add body parameter as alias for data
- Add raw_response parameter for binary downloads
- Support headers as both dict and array formats
- Map curl exit codes to structured error types
- Fix redirect parsing to return final response status code
- Update registry.yaml with new parameters and return types

--- a/registry.yaml
+++ b/registry.yaml
@@ -82,11 +82,14 @@ tools:
             default: GET
             description: "HTTP method"
           headers:
-            type: object
-            description: "Custom headers as key-value pairs"
+            type: [object, array]
+            description: "Custom headers as key-value pairs (object) or array of 'Header: value' strings"
           data:
             type: string
             description: "Request body data"
+          body:
+            type: string
+            description: "Request body data (alias for 'data')"
           follow_redirects:
             type: boolean
             default: true
@@ -95,6 +98,10 @@ tools:
             type: integer
             default: 30
             description: "Request timeout in seconds"
+          connect_timeout:
+            type: integer
+            default: 10
+            description: "Connection timeout in seconds"
           insecure:
             type: boolean
             default: false
@@ -108,6 +115,15 @@ tools:
           auth:
             type: string
             description: "Basic auth in user:password format"
+          debug_level:
+            type: integer
+            enum: [0, 1, 2, 3]
+            default: 0
+            description: "Debug level: 0=none, 1=request headers, 2=verbose output, 3=full trace"
+          raw_response:
+            type: boolean
+            default: false
+            description: "Return raw binary response as base64 (for binary downloads)"
         returns:
           status_code:
             type: integer
@@ -118,6 +134,57 @@ tools:
           body:
             type: string
             description: "Response body"
+          body_length:
+            type: integer
+            description: "Length of response body in bytes"
+          timing:
+            type: object
+            description: "Request timing breakdown"
+            properties:
+              dns_lookup_ms:
+                type: integer
+                description: "DNS lookup time in milliseconds"
+              connect_ms:
+                type: integer
+                description: "TCP connection time in milliseconds"
+              tls_handshake_ms:
+                type: integer
+                description: "TLS handshake time in milliseconds"
+              first_byte_ms:
+                type: integer
+                description: "Time to first byte in milliseconds"
+              total_ms:
+                type: integer
+                description: "Total request time in milliseconds"
+              remote_ip:
+                type: string
+                description: "IP address of the remote server"
+              remote_port:
+                type: integer
+                description: "Port of the remote server"
+          debug:
+            type: object
+            description: "Debug information (when debug_level >= 1)"
+            properties:
+              request_headers:
+                type: object
+                description: "Headers sent in the request"
+              verbose_output:
+                type: string
+                description: "Full verbose output (debug_level >= 2)"
+          error:
+            type: object
+            description: "Error details (on failure)"
+            properties:
+              type:
+                type: string
+                description: "Error type (e.g., 'connection_refused', 'timeout', 'could_not_resolve_host')"
+              message:
+                type: string
+                description: "Human-readable error message"
+              curl_exit_code:
+                type: integer
+                description: "Curl exit code"
 
       download:
         description: "Download a file from a URL"
@@ -217,11 +284,14 @@ tools:
             default: true
             description: "Strip HTML tags from output"
           headers:
-            type: object
-            description: "Custom headers as key-value pairs"
+            type: [object, array]
+            description: "Custom headers as key-value pairs (object) or array of 'Header: value' strings"
           data:
             type: string
             description: "POST body (use {PAYLOAD} as placeholder)"
+          body:
+            type: string
+            description: "POST body (alias for 'data', use {PAYLOAD} as placeholder)"
           cookie:
             type: string
             description: "Cookie header value"
@@ -229,10 +299,19 @@ tools:
             type: integer
             default: 30
             description: "Request timeout in seconds"
+          connect_timeout:
+            type: integer
+            default: 10
+            description: "Connection timeout in seconds"
           insecure:
             type: boolean
             default: false
             description: "Skip SSL certificate verification"
+          debug_level:
+            type: integer
+            enum: [0, 1, 2, 3]
+            default: 0
+            description: "Debug level: 0=none, 1=request headers, 2=verbose output, 3=full trace"
         returns:
           output:
             type: string
@@ -243,6 +322,15 @@ tools:
           raw_body_length:
             type: integer
             description: "Length of raw response body"
+          timing:
+            type: object
+            description: "Request timing breakdown (same as request method)"
+          debug:
+            type: object
+            description: "Debug information (when debug_level >= 1)"
+          error:
+            type: object
+            description: "Error details (on failure)"
 
       upload:
         description: "Upload a file using multipart/form-data"
@@ -276,8 +364,8 @@ tools:
             type: object
             description: "Additional form fields as key-value pairs"
           headers:
-            type: object
-            description: "Custom HTTP headers"
+            type: [object, array]
+            description: "Custom HTTP headers as key-value pairs (object) or array of 'Header: value' strings"
           cookie:
             type: string
             description: "Cookie header value"
@@ -285,10 +373,19 @@ tools:
             type: integer
             default: 60
             description: "Upload timeout in seconds"
+          connect_timeout:
+            type: integer
+            default: 10
+            description: "Connection timeout in seconds"
           insecure:
             type: boolean
             default: false
             description: "Skip SSL certificate verification"
+          debug_level:
+            type: integer
+            enum: [0, 1, 2, 3]
+            default: 0
+            description: "Debug level: 0=none, 1=request headers, 2=verbose output, 3=full trace"
         returns:
           status_code:
             type: integer
@@ -302,6 +399,18 @@ tools:
           body:
             type: string
             description: "Response body"
+          body_length:
+            type: integer
+            description: "Length of response body"
+          timing:
+            type: object
+            description: "Request timing breakdown (same as request method)"
+          debug:
+            type: object
+            description: "Debug information (when debug_level >= 1)"
+          error:
+            type: object
+            description: "Error details (on failure)"
 
   playwright-mcp:
     name: playwright-mcp
